lua/examples/lua-test-suite/IntelliJ-Luanalysis/src/test/resources/inspections/requireA.lua.fail
local B = require("requireB")
local C = require("requireC")

---@type number
local aNumber

---@type string
local aString

aNumber = B
aString = <error descr="Type mismatch. Required: 'string' Found: 'number'">B</error>
aNumber = <error descr="Type mismatch. Required: 'number' Found: 'void'">C</error>
